[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/shot.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/projectiles/shot.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 2, 4 )

[node name="shot" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )
__meta__ = {
"__editor_plugin_screen__": "Script"
}
shot_size = 1

[node name="visibility" type="VisibilityNotifier2D" parent="."]

transform/scale = Vector2( 0.852349, 0.770745 )
rect = Rect2( -10, -10, 20, 20 )

[node name="sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="collision" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[connection signal="area_enter" from="." to="." method="_on_shot_area_enter"]

[connection signal="body_enter" from="." to="." method="_on_shot_body_enter"]

[connection signal="exit_screen" from="visibility" to="." method="_on_visibility_exit_screen"]


